File reformat